--- a/build.gradle
+++ b/build.gradle
@@ -25,11 +25,14 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
+//    db 드라이버 : mariaDB, mysql, oracle 등
+    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 //    스프링jpa 의존성
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
@@ -45,7 +48,6 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
 // 	토큰의 JSON 인코딩/디코딩, 직렬화/파싱 에 필요
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
-
 
 //    파일처리를 위한 aws 의존성 추가
     implementation 'software.amazon.awssdk:s3:2.29.50'
