--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,9 @@ dependencies {
 //    파일처리를 위한 aws 의존성 추가
     implementation 'software.amazon.awssdk:s3:2.29.50'
 
+//    redis 연결작업을 위한 의존성
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
