--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,9 @@ dependencies {
 //    접속 url : http://localhost:8080/swagger-ui.html
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 
+//    재고관련 rdb동기화작업을 이벤트기반 비동기적으로 처리하기위한 rabbitmq 의존성
+    implementation 'org.springframework.boot:spring-boot-starter-amqp'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
